kube/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: db
  name: db
spec:
  replicas: 2
  selector:
    matchLabels:
      service: db
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        network/db-net: "true"
        service: db
    spec:
      containers:
        - args:
            - --default-authentication-plugin=mysql_native_password
          image: mysql
          livenessProbe:
            exec:
              command:
                - mysqladmin
                - ping
                - -h
                - localhost
            failureThreshold: 20
            periodSeconds: 1
          name: db
          ports:
            - containerPort: 3306
          imagePullPolicy: IfNotPresent
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: db-claim0
      restartPolicy: Always
      volumes:
        - name: db-claim0
          persistentVolumeClaim:
            claimName: db-claim0
status: {}
