kube/db-net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: db-net
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network/db-net: "true"
  podSelector:
    matchLabels:
      network/db-net: "true"
